# nazg

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY.md  build.sh  run.sh
.github/workflows/: ci.yml  release.yml
agent/: main.cpp
app/: main.cpp
docs/: blackbox.md  bots.md  brain.md  cgit_integration_checklist.md  cgit_integration_plan.md  config.md  directive.md  docker-cli-usage.md  docker-integration-summary.md  docker-module-unified.md  docker-monitoring-progress.md  docker-monitoring.md  docker-orchestration-design.md  docker-orchestration-status.md  docker-tui-complete.md  dockerMaintainPlan.md  doctor_bot_sshpass_plan.md  engine.md  failure_learning_plan.md  git.md  git_enhancement_checklist.md  git_enhancement_plan.md  git_server_config.md  gitea_integration_checklist.md  gitea_integration_plan.md  nexus.md  prompt.md  prompt_enhancement_plan.md  quickstart.md  scaffold.md  status.md  system.md  task.md  test_runner_checklist.md  test_runner_design.md  tui_component_architecture.md  tui_design.md  tui_improvement_plan.md  workspace_time_machine_plan.md
examples/: config.toml
modules/agent/include/agent/: docker_scanner.hpp  local_store.hpp  protocol.hpp  runtime.hpp
modules/agent/migrations/: 001_agent_init.sql
modules/agent/src/: docker_scanner.cpp  local_store.cpp  protocol.cpp  runtime.cpp
modules/blackbox/include/blackbox/: level.hpp  logger.hpp  options.hpp
modules/blackbox/src/: logger.cpp
modules/bot/include/bot/: commands.hpp  doctor.hpp  git_doctor.hpp  registry.hpp  transport.hpp  types.hpp
modules/bot/scripts/: doctor.sh  git-doctor.sh
modules/bot/src/: commands.cpp  doctor.cpp  git_doctor.cpp  registry.cpp  transport.cpp
modules/brain/include/brain/: commands.hpp  detector.hpp  learner.hpp  pattern_matcher.hpp  planner.hpp  recovery.hpp  snapshot.hpp  types.hpp
modules/brain/src/: commands.cpp  detector.cpp  learner.cpp  pattern_matcher.cpp  planner.cpp  recovery.cpp  snapshot.cpp
modules/config/include/config/: config.hpp  parser.hpp
modules/config/src/: config.cpp  parser.cpp
modules/directive/include/directive/: agent_commands.hpp  agent_utils.hpp  builtins.hpp  command.hpp  context.hpp  db_commands.hpp  docker_commands.hpp  registry.hpp
modules/directive/src/: agent_commands.cpp  agent_utils.cpp  builtins.cpp  db_commands.cpp  docker_commands.cpp  registry.cpp
modules/docker_monitor/include/docker_monitor/: client.hpp  commands.hpp  compose_parser.hpp  orchestrator.hpp
modules/docker_monitor/src/: client.cpp  commands.cpp  compose_parser.cpp  orchestrator.cpp
modules/engine/include/engine/: cmd_info.hpp  fwd.hpp  runtime.hpp  updater.hpp  version.hpp
modules/engine/src/: cmd_info.cpp  runtime.cpp  updater.cpp
modules/git/include/git/: bare.hpp  cgit.hpp  client.hpp  commands.hpp  gitea.hpp  gitea_api.hpp  maintenance.hpp  migration.hpp  server.hpp  server_registry.hpp
modules/git/src/: bare.cpp  cgit.cpp  client.cpp  commands.cpp  gitea.cpp  gitea_api.cpp  maintenance.cpp  migration.cpp  server.cpp  server_registry.cpp
modules/nexus/include/nexus/: config.hpp  connection.hpp  crypto.hpp  migrator.hpp  sqlite_driver.hpp  store.hpp  types.hpp
modules/nexus/migrations/: 001_init.sql  002_git_servers.sql  003_bots.sql  004_tests.sql  005_workspace.sql  006_brain_learning.sql  007_git_server_admin.sql  008_git_server_health.sql  009_docker_monitoring.sql  010_server_agent_container.sql  011_docker_orchestration.sql  012_encryption_metadata.sql
modules/nexus/src/: config.cpp  connection.cpp  crypto.cpp  docker_monitoring.cpp  migrator.cpp  sqlite_driver.cpp  store.cpp
modules/prompt/: DESIGN.md
modules/prompt/include/prompt/: colors.hpp  demo.hpp  gradient.hpp  icons.hpp  prompt.hpp
modules/prompt/src/: colors.cpp  demo.cpp  gradient.cpp  icons.cpp  prompt.cpp
modules/scaffold/include/scaffold/: commands.hpp  scaffold.hpp  templates.hpp
modules/scaffold/src/: commands.cpp  scaffold.cpp
modules/system/include/system/: fs.hpp  package.hpp  process.hpp  sysinfo.hpp  terminal.hpp
modules/system/src/: fs.cpp  package.cpp  process.cpp  sysinfo.cpp  terminal.cpp
modules/task/include/task/: builder.hpp  executor.hpp
modules/task/src/: builder.cpp  executor.cpp
modules/testsuite/: CMakeLists.txt
modules/testsuite/include/test/: adapters.hpp  commands.hpp  detector.hpp  runner.hpp  types.hpp  workspace_suite.hpp
modules/testsuite/src/: adapters.cpp  commands.cpp  runner.cpp  workspace_suite.cpp
modules/testsuite/src/adapters/: gtest.cpp  pytest.cpp
modules/tui/: CMakeLists.txt
modules/tui/include/tui/: command_bar.hpp  commands.hpp  component_base.hpp  ftxui_component.hpp  layout_utils.hpp  menu.hpp  menu_registry.hpp  pane.hpp  statusbar.hpp  terminal.hpp  theme.hpp  tui.hpp  tui_api.hpp  tui_context.hpp  window.hpp
modules/tui/include/tui/managers/: command_manager.hpp  key_manager.hpp  layout.hpp  menu_manager.hpp  mode_manager.hpp  pane_reaper.hpp
modules/tui/include/tui/menus/: docker_menu.hpp  main_menu.hpp
modules/tui/src/: command_bar.cpp  commands.cpp  component_base.cpp  layout_utils.cpp  menu_registry.cpp  pane.cpp  statusbar.cpp  terminal.cpp  theme.cpp  tui.cpp  tui_context.cpp  window.cpp
modules/tui/src/managers/: command_manager.cpp  key_manager.cpp  layout.cpp  menu_manager.cpp  mode_manager.cpp  pane_reaper.cpp
modules/tui/src/menus/: docker_menu.cpp  main_menu.cpp
modules/workspace/include/workspace/: commands.hpp  manager.hpp  types.hpp
modules/workspace/src/: commands.cpp  manager.cpp
tests/: smoke.sh  test_main.cpp
